# Analyzr

./: .gitignore  FRONTEND_REDESIGN_SUMMARY.md  README.md
backend/: .env.example  README.md  main.py  pyproject.toml  pyrightconfig.json  test_sales.csv
backend/app/models/: schemas.py
backend/app/routers/: analysis.py  chat.py  playground.py  report.py  upload.py  visualizations.py
backend/app/services/: ai_engine.py  chatbot.py  context_builder.py  ingest.py  report_generator.py  semantic_classifier.py  visualization.py
backend/app/services/analytics/: business.py  descriptive.py  diagnostic.py  predictive.py
backend/app/utils/: session_store.py
frontend/: README.md  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ChatBubble.tsx  Layout.tsx  LoadingScreen.tsx  Navbar.tsx  ResultsPage.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Tabs.tsx
frontend/src/pages/: ChatPage.tsx  DashboardPage.tsx  ReportPage.tsx  ReportsView.tsx  UploadPage.tsx  VisualizationsPage.tsx
